{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 10,
  "lineage": "180fbd22-6e7b-78e1-8952-674b620f4a15",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "swarm_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea3c35c5c3284d82",
            "arn": "arn:aws:ec2:us-east-2:950246260509:instance/i-053756d429c2dbea6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053756d429c2dbea6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "ca0-keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a2c16c046dbf6d94",
            "private_dns": "ip-10-0-1-129.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.129",
            "public_dns": "ec2-3-147-195-156.us-east-2.compute.amazonaws.com",
            "public_ip": "3.147.195.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d8566989674508f1",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f4773cc92a44564",
            "tags": {
              "Name": "swarm-manager",
              "Project": "CA2-Swarm",
              "Role": "manager"
            },
            "tags_all": {
              "Name": "swarm-manager",
              "Project": "CA2-Swarm",
              "Role": "manager"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0932a31c19734751b"
            ]
          },
          "dependencies": [
            "aws_security_group.swarm_sg",
            "aws_subnet.swarm_public_subnet",
            "aws_vpc.swarm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "swarm_worker_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea3c35c5c3284d82",
            "arn": "arn:aws:ec2:us-east-2:950246260509:instance/i-0ca13fc9070101cdd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca13fc9070101cdd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "ca0-keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0004fa02d08a525c0",
            "private_dns": "ip-10-0-1-176.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.176",
            "public_dns": "ec2-3-17-175-254.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.175.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d98228bc2d940350",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f4773cc92a44564",
            "tags": {
              "Name": "swarm-worker-1",
              "Project": "CA2-Swarm",
              "Role": "worker"
            },
            "tags_all": {
              "Name": "swarm-worker-1",
              "Project": "CA2-Swarm",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0932a31c19734751b"
            ]
          },
          "dependencies": [
            "aws_security_group.swarm_sg",
            "aws_subnet.swarm_public_subnet",
            "aws_vpc.swarm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "swarm_worker_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea3c35c5c3284d82",
            "arn": "arn:aws:ec2:us-east-2:950246260509:instance/i-09af58e9d93cba214",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09af58e9d93cba214",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "ca0-keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00fcbb4c46b46d52b",
            "private_dns": "ip-10-0-1-91.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.91",
            "public_dns": "ec2-3-146-34-43.us-east-2.compute.amazonaws.com",
            "public_ip": "3.146.34.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0165a882f47f38b48",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f4773cc92a44564",
            "tags": {
              "Name": "swarm-worker-2",
              "Project": "CA2-Swarm",
              "Role": "worker"
            },
            "tags_all": {
              "Name": "swarm-worker-2",
              "Project": "CA2-Swarm",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0932a31c19734751b"
            ]
          },
          "dependencies": [
            "aws_security_group.swarm_sg",
            "aws_subnet.swarm_public_subnet",
            "aws_vpc.swarm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "swarm_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:950246260509:internet-gateway/igw-02a74a780b8a30a12",
            "id": "igw-02a74a780b8a30a12",
            "owner_id": "950246260509",
            "tags": {
              "Name": "swarm-igw",
              "Project": "CA2-Swarm"
            },
            "tags_all": {
              "Name": "swarm-igw",
              "Project": "CA2-Swarm"
            },
            "vpc_id": "vpc-0d2bb88fd4df29dd0"
          },
          "dependencies": [
            "aws_vpc.swarm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "swarm_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:950246260509:route-table/rtb-0531f4ea46fd22e22",
            "id": "rtb-0531f4ea46fd22e22",
            "owner_id": "950246260509",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a74a780b8a30a12",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "swarm-public-rt",
              "Project": "CA2-Swarm"
            },
            "tags_all": {
              "Name": "swarm-public-rt",
              "Project": "CA2-Swarm"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2bb88fd4df29dd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.swarm_igw",
            "aws_vpc.swarm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swarm_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0f16bc501a24c48",
            "route_table_id": "rtb-0531f4ea46fd22e22",
            "subnet_id": "subnet-04f4773cc92a44564"
          },
          "dependencies": [
            "aws_internet_gateway.swarm_igw",
            "aws_route_table.swarm_public_rt",
            "aws_subnet.swarm_public_subnet",
            "aws_vpc.swarm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swarm_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:950246260509:security-group/sg-0932a31c19734751b",
            "description": "Security group for Docker Swarm cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0932a31c19734751b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Processor health endpoint",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Producer health endpoint",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Docker Swarm cluster management",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2377
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Docker Swarm node communication TCP",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Docker Swarm node communication UDP",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Docker Swarm overlay network",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Kafka internal",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MongoDB internal",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "swarm-sg",
            "name_prefix": "",
            "owner_id": "950246260509",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "swarm-sg",
              "Project": "CA2-Swarm"
            },
            "tags_all": {
              "Name": "swarm-sg",
              "Project": "CA2-Swarm"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2bb88fd4df29dd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.swarm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swarm_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:950246260509:subnet/subnet-04f4773cc92a44564",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f4773cc92a44564",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950246260509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swarm-public-subnet",
              "Project": "CA2-Swarm"
            },
            "tags_all": {
              "Name": "swarm-public-subnet",
              "Project": "CA2-Swarm"
            },
            "vpc_id": "vpc-0d2bb88fd4df29dd0"
          },
          "dependencies": [
            "aws_vpc.swarm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "swarm_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:950246260509:vpc/vpc-0d2bb88fd4df29dd0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00574dfe4b3c6222c",
            "default_route_table_id": "rtb-0b74d07f5edd038ee",
            "default_security_group_id": "sg-077ca3e9c55dda457",
            "dhcp_options_id": "dopt-0a70be524b94c2303",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d2bb88fd4df29dd0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b74d07f5edd038ee",
            "owner_id": "950246260509",
            "tags": {
              "Name": "swarm-vpc",
              "Project": "CA2-Swarm"
            },
            "tags_all": {
              "Name": "swarm-vpc",
              "Project": "CA2-Swarm"
            }
          }
        }
      ]
    }
  ]
}